popup blurred bug fixed anad minor style improvements

--- a/style.css
+++ b/style.css
@@ -128,9 +128,7 @@ strong, b {
 .current-year-container {
     position:absolute;
     margin:2%;
-    padding:10px;
-    padding-top:5px;
-    padding-bottom:5px;
+    padding:2px 10px;
     width:170px;
     left:0;
     top:0;
@@ -151,7 +149,7 @@ strong, b {
 }
 
 .current-year-container .information {
-    padding-left:5px;
+    padding-left:3px;
     padding-right:7px;
     padding-bottom:5px;
     color:#585858;
@@ -484,6 +482,10 @@ ol.message_list { position: relative }
     box-shadow:0 0 1px #888 !important;
     border-radius:4px !important;
     padding-top:15px !important;    
+    
+    -webkit-filter: blur(0);
+    -webkit-transform: translate3d(-0.01%, -0.01%, 0);
+    transform: translate3d(-0.01%, -0.01%, 0);
 }
 
 .mapboxgl-popup-close-button {
